--- a/public/game.css
+++ b/public/game.css
@@ -5,43 +5,151 @@ body{
 	font-family: 'Modak', sans-serif;
 }
 
-#chatBox{
-    height:150px;
-    width:400px;
-
-    font-family:'Roboto', serif;
-    font-size:15px;
+.promptBox{
+    width:500px;
+    height:190px;
 
     position:absolute;
-    left:5px;
-    bottom:20px;
+
+    border:5px solid #282828;
+    border-radius:85px;
+    background:linear-gradient(to bottom right, dimgray, lightgray);
+
+    color:#282828;
+
+    z-index:5;
+}
+
+div.promptBox hr{
+    width:85%;
+    border:1px solid #282828;
+}
+
+div#usernamePromptBox #usernameInputBox{
+    width:300px;
+    height:25px;
+
+    background:linear-gradient(to top left, #afafaf, #cecece);
+
+    border:2px solid #282828;
+    border-radius:5px;
+
+    display:block;
+    margin:auto;
+    margin-top:15px;
+    margin-bottom:12px;
+
+    color:#282828;
+    /*font-family:'Roboto', serif;*/
+    font-weight:lighter;
+    text-align:center;
+    font-size:20px;
+    overflow:hidden;
+}
+
+div.promptBox .button{
+    position:absolute;
+    bottom:92px;
+
+    border:2px solid #282828;
+    border-radius:7px;
+
+    font-size:20px;
+
+    text-align:center;
+
+    height:25px;
+    width:45px;
+    padding:0px 5px 2px 5px;
+}
+
+div.promptBox p{
+    font-family:'Roboto', serif;
+    color:#282828;
+    font-size:14px;
+    text-align:center;
+    max-width:85%;
+    margin:auto;
+    margin-bottom:10px;
+    font-weight:bold;
+}
+
+div.promptBox li{
+    font-family:'Roboto', serif;
+    font-size:14px;
+    margin-left:100px;
+    font-weight:bold;
+}
+
+#chatBox{
+    height:125px;
+    width:300px;
+
+    font-family:'Roboto', serif;
+    font-size:16px;
+
+    position:absolute;
+    left:3px;
+    bottom:25px;
 
     padding:5px;
 
-    background-color: 'rgba(255, 255, 255, 0.5)';
+    border-radius:10px;
+
+    background-color:rgba(255, 255, 255, 0.02);
 
     /*overflow:hidden;*/
 }
 
 #sendBox{
+    font-family:'Roboto', serif;
+    color:grey;
+    font-weight:lighter;
+    font-size:16px;
+
     height:25px;
-    width:400px;
+    width:310px;
 
     position:absolute;
-    left:5px;
-    bottom:5px;
-
-    background-color:'rba(0, 0, 0, 0)';
+    left:3px;
+    bottom:0px;
 }
 
 #chatInput{
+    overflow:hidden;
+    margin-bottom:0px;
+
+    padding-top:3px;
+    height:22px;
+    width:220px;
+    padding-left:10px;
+
     display:inline-block;
-    width:325px;
+    
+    border-radius:5px 5px 0px 0px;
+    background-color:rgba(255, 255, 255, 0.05);
+}
+
+#chatInput:focus{
+    outline:none;
+    background-color:rgba(255, 255, 255, 0.1);
 }
 
 #sendButton{
-    display:inline-block;
-    width:65px;
+    float:right;
+    margin-right:12px;
+
+    text-align:center;
+    font-size:18px;
+    font-weight:bold;
+
+    background-color:rgba(255, 255, 255, 0.05);
+
+    padding-top:2px;
+    width:60px;
+    height:23px;
+    
+    border-radius:5px;
 }
 
 h1 {
